# saalr-platform

./: .dockerignore  .env.example  .gitattributes  .gitignore  README.md  alembic.ini  apply_mcp_data_class.sh  pyproject.toml
.claude/agents/: saalr-domain-architect.md
.github/workflows/: ci.yml  deploy-web.yml  deploy.yml
Arch-HLD-LLD-v1/: Saalr-Architecture.md  Saalr-HLD.md  Saalr-LLD.md
apps/api/: Dockerfile  pyproject.toml
apps/api/saalr_api/: main.py
apps/api/saalr_api/account/: router.py
apps/api/saalr_api/auth/: __init__.py  dependency.py  magic.py  providers.py
apps/api/saalr_api/backtests/: router.py  schemas.py
apps/api/saalr_api/billing/: provider.py  reducer.py  repo.py  router.py  schemas.py  service.py  test_price_selection.py
apps/api/saalr_api/content/: repo.py  router.py  schemas.py
apps/api/saalr_api/dev/: router.py
apps/api/saalr_api/discovery/: router.py  schemas.py
apps/api/saalr_api/forecast/: gating.py  price_service.py  repo.py  router.py  service.py
apps/api/saalr_api/market/: gating.py  oi_change.py  oi_repo.py  router.py  service.py  snapshots.py
apps/api/saalr_api/marketing/: router.py
apps/api/saalr_api/montecarlo/: router.py  schemas.py
apps/api/saalr_api/oms/: marks.py  repo.py  router.py  schemas.py  service.py
apps/api/saalr_api/onboarding/: repo.py  router.py
apps/api/saalr_api/regime/: router.py  service.py
apps/api/saalr_api/research/: gating.py  repo.py  router.py  schemas.py  service.py
apps/api/saalr_api/sentiment/: router.py
apps/api/saalr_api/strategies/: repo.py  router.py  schemas.py  service.py  stepup.py
apps/backtest-worker/: Dockerfile  pyproject.toml
apps/backtest-worker/backtest_worker/: cli.py  consumer.py  repo.py  service.py
apps/backtest-worker/tests/: test_cli_parser.py
apps/content-worker/: Dockerfile  pyproject.toml
apps/content-worker/content_worker/: cli.py  reindex.py
apps/content-worker/tests/: test_cli.py
apps/desktop/: package.json
apps/desktop/src-tauri/: tauri.conf.json
apps/discovery-worker/: pyproject.toml
apps/discovery-worker/discovery_worker/: __main__.py  cli.py  consumer.py  repo.py  service.py
apps/discovery-worker/tests/: test_cli_parser.py
apps/ingest-worker/: Dockerfile  README.md  crontab  docker-entrypoint.sh  pyproject.toml
apps/ingest-worker/ingest_worker/: cli.py  repo.py  service.py
apps/mcp-edge/: pyproject.toml
apps/mcp-edge/saalr_mcp/: data_class.py  wiring.py
apps/ml-worker/: Dockerfile  README.md  pyproject.toml
apps/ml-worker/ml_worker/: cli.py  finbert.py
apps/ml-worker/tests/: test_cli_parser.py  test_finbert_live.py
apps/oms-worker/: Dockerfile  pyproject.toml
apps/oms-worker/oms_worker/: cli.py  reconcile.py
apps/oms-worker/tests/: conftest.py  test_cli.py  test_reconcile_worker.py
apps/research-agent/: Dockerfile  README.md  pyproject.toml
apps/research-agent/research_agent/: cli.py  consumer.py  service.py
apps/web/: .env.example  .gitignore  .prettierrc  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.ts  tsconfig.json  vite.config.ts  vite.desktop.config.ts
apps/web/desktop/: index.html  main-desktop.tsx
apps/web/pages/: +Layout.tsx  +config.ts
apps/web/public/: robots.txt
apps/web/scripts/: check-prerender.mjs  gen-academy.ts  gen-seo.ts
apps/web/src/: index.css  main.tsx  vite-env.d.ts
design/: saalr-logo-concepts.html
docs/: INVARIANTS.md  architecture.md  hld.md  lld.md  mobile-store-readiness.md
docs/deck/: SAALR_Seed_Deck_v2 (1).pptx  SAALR_Seed_Deck_v2_pdf_extract.txt  deck-summary-institutional-seed.md  deck-summary-investor-onepager.md  deck-summary-strategic-angels.md  deck-summary.md
docs/runbooks/: README.md  billing.md  finbert-sentiment.md  go-live-apply.md  go-live-images.md  go-live-web.md  ingest-worker.md  oms-reconcile.md  research-agent.md
docs/superpowers/plans/: 2026-05-28-frontend-foundation.md  2026-05-28-magic-link.md  2026-05-28-scaffold-and-data-layer.md  2026-05-29-equity-screener-backtest.md  2026-05-30-backtest-engine.md  2026-05-30-greeks-vol-surface.md  (+54 more)
infra/docker/: docker-compose.build.yml  docker-compose.ingest.yml  docker-compose.localstack.yml  docker-compose.yml
infra/ecs-task-defs/: README.md
infra/migrations/: env.py
infra/terraform/: .gitignore  README.md
mocks/: index.html
scripts/: export_audience.py  orchestrate-web.ps1  orchestrate.ps1  start.ps1  start.sh  test_export_audience.py
tests/: conftest.py  test_stepup.py
tests/fixtures/: golden_strategies.json
tests/integration/: conftest.py  test_account.py  test_agent_graph.py  test_auth.py  test_backtest.py  test_backtest_api.py  test_backtest_queue.py  test_backtest_schemas.py  test_billing.py  test_billing_resolver.py  test_billing_stripe_live.py  test_constraints.py  test_content.py  test_cors.py  test_dev_seed.py  test_discovery_api.py  test_discovery_consume.py  test_discovery_repo.py  test_healthz.py  test_ingest.py  test_llm_usage.py  test_load_closes_move.py  test_magic_link.py  test_market.py  test_market_oi_change.py  test_market_smoke.py  test_marketing_audience.py  test_migrations.py  test_montecarlo.py  test_oms.py  test_oms_alpaca.py  test_oms_marks.py  test_oms_reconcile.py  test_oms_tradier.py  test_onboarding.py  test_onboarding_migration.py  test_paper_strategy.py  test_price_forecast.py  test_promotion.py  test_rag_ask.py  (+17 more)
tests/mcp/: test_data_class_boundary.py
tests/unit/: test_auth_providers.py  test_discovery_golden.py  test_ids.py  test_models_metadata.py  test_strategy_invariants.py
tools/equity-screener/: RESULT.md  progress.txt  pyproject.toml
tools/equity-screener/equity_screener/: backtest.py  cli.py  edgar.py  fundamentals.py  prices.py  report.py  screen.py  universe.py
tools/equity-screener/tests/: test_backtest_metrics.py  test_edgar.py  test_fundamentals.py  test_integration.py  test_portfolio.py  test_report.py  test_screen.py  test_universe.py
tools/equity-screener/tests/fixtures/: companyfacts_sample.json
tools/load-testing/: README.md
tools/seed-data/: README.md
(+373 files in other folders)
