[project]
name = "saalr"
version = "0.0.0"
requires-python = ">=3.12,<3.13"
dependencies = ["saalr-core", "saalr-api"]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*", "apps/*"]
exclude = ["apps/web"]

[tool.uv.sources]
saalr-core = { workspace = true }
saalr-api = { workspace = true }

[dependency-groups]
dev = [
  "alembic>=1.13",
  "asyncpg>=0.29",
  "psycopg2-binary>=2.9",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "ruff>=0.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
