[project]
name = "saalr"
version = "0.0.0"
requires-python = ">=3.12,<3.13"
dependencies = ["saalr-core", "saalr-api", "saalr-ml", "saalr-brokers"]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*", "apps/*"]
exclude = ["apps/web", "apps/desktop"]

# CPU-only PyTorch: pin torch to the CPU wheel index so the images don't pull
# the multi-GB NVIDIA CUDA libraries (Fargate has no GPU). Shrinks the api / ml
# images by several GB and lets tasks run on the default ephemeral disk.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
saalr-core = { workspace = true }
saalr-api = { workspace = true }
saalr-ml = { workspace = true }
saalr-brokers = { workspace = true }
torch = [{ index = "pytorch-cpu" }]

[dependency-groups]
dev = [
  "alembic>=1.13",
  "asyncpg>=0.29",
  "psycopg2-binary>=2.9",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "ruff>=0.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
