[project]
name = "saalr-api"
version = "0.0.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "saalr-core",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pyjwt[crypto]>=2.9",
  "redis>=5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["saalr_api"]

[tool.uv.sources]
saalr-core = { workspace = true }
