[project]
name = "saalr-content-worker"
version = "0.0.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "saalr-core[openai]",
  "saalr-content",
  "sqlalchemy>=2.0",
  "asyncpg>=0.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["content_worker"]

[tool.uv.sources]
saalr-core = { workspace = true }
saalr-content = { workspace = true }

[dependency-groups]
dev = ["pytest>=8.0"]
