[project]
name = "saalr-discovery-worker"
version = "0.0.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "saalr-core",
  "saalr-ml",
  "saalr-api",
  "redis>=5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["discovery_worker"]

[tool.uv.sources]
saalr-core = { workspace = true }
saalr-ml = { workspace = true }
saalr-api = { workspace = true }
