[project]
name = "saalr-ml-worker"
version = "0.0.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "saalr-core",
  "transformers>=4.40",
  "torch>=2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ml_worker"]

[tool.uv.sources]
saalr-core = { workspace = true }

[dependency-groups]
dev = ["pytest>=8.0"]
