[project]
name = "saalr-research-agent"
version = "0.0.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "saalr-core[openai]",
  "saalr-ml",
  "saalr-content",
  "sqlalchemy>=2.0",
  "asyncpg>=0.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["research_agent"]

[tool.uv.sources]
saalr-core = { workspace = true }
saalr-ml = { workspace = true }
saalr-content = { workspace = true }

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
